--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  
+
+   <% if current_user %> 
+   <% binding.pry %>
+    <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+  <% else %>
+    <%= link_to "Sign In", new_user_session_path %>
+    <%= link_to  "Sign Up", new_user_registration_path %>
+  <% end %>
 
   <%- flash.each do |key, value| -%>
     <div class="flash flash-<%= key %>">
