--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,25 @@
 </head>
 <body>
 
-   <% if current_user %> 
-    <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
-  <% else %>
-    <%= link_to "Sign In", new_user_session_path %>
-    <%= link_to  "Sign Up", new_user_registration_path %>
-  <% end %>
+   <div class="top-bar">
+      <div class="top-bar-left">
+        <ul class="menu">
+          <li class="menu-text"><%= link_to 'React on Rails', root_path %></li>
+        </ul>
+        <div class="top-bar-right">
+          <% if signed_in? %>
+            <ul class="dropdown menu" data-dropdown-menu>
+              <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+            </ul>
+          <% else %>
+            <ul class="menu">
+              <li><%= link_to "Sign In", new_user_session_path %></li>
+              <li><%= link_to "Sign Up", new_user_registration_path %></li>
+            </ul>
+          <% end %>
+        </div>
+      </div>
+    </div>
 
   <%- flash.each do |key, value| -%>
     <div class="flash flash-<%= key %>">
