--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
    <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
-          <li class="menu-text"><%= link_to 'React on Rails', root_path %></li>
+          <li class="menu-text"><%= link_to 'Bands', root_path %></li>
         </ul>
         <div class="top-bar-right">
           <% if signed_in? %>
