--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,21 +7,21 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  
    <div class="top-bar">
       <div class="top-bar-left">
-        <ul class="menu">
-          <li class="menu-text"><%= link_to 'Bands', root_path %></li>
-        </ul>
+       <!-- <ul class="menu"> -->
+          <span class="menu-text"><%= link_to 'Bands', root_path %></span>
+        <!-- </ul> -->
         <div class="top-bar-right">
           <% if signed_in? %>
-            <ul class="dropdown menu" data-dropdown-menu>
-              <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
-            </ul>
+            <!-- <ul class="dropdown menu" data-dropdown-menu> -->
+              <span><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></span>
+            <!-- </ul> -->
           <% else %>
-            <ul class="menu">
-              <li><%= link_to "Sign In", new_user_session_path %></li>
-              <li><%= link_to "Sign Up", new_user_registration_path %></li>
+            <!-- <ul class="menu"> -->
+              <span><%= link_to "Sign In", new_user_session_path %></span>
+              <span><%= link_to "Sign Up", new_user_registration_path %></span>
             </ul>
           <% end %>
         </div>
