--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,27 +8,19 @@
 </head>
 <body>
   
-   <div class="nav-bar">
-      
-
-          <span class="top-bar-left"> <%= link_to  'Bands', root_path %></span>
-        <!-- </ul> -->
-        <div class="top-bar-right">
-          <% if signed_in? %>
-            <!-- <ul class="dropdown menu" data-dropdown-menu> -->
-              <span><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></span>
-            <!-- </ul> -->
-          <% else %>
-
-              <span class="nav-text"><%= link_to "Sign In", new_user_session_path %></span>
-              <span class="nav-text"><%= link_to "Sign Up", new_user_registration_path %></span>
-             </ul> 
-          <% end %>
-        
-      </div>
+  <div class="nav-bar">
+    <span class="top-bar-left"> <%= link_to  'Bands', root_path %></span>
+    <div class="top-bar-right">
+      <% if signed_in? %>
+        <span><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></span>
+      <% else %>
+        <span class="nav-text"><%= link_to "Sign In", new_user_session_path %></span>
+        <span class="nav-text"><%= link_to "Sign Up", new_user_registration_path %></span>
+      <% end %>
     </div>
+  </div>
 
-  <%- flash.each do |key, value| -%>
+  <% flash.each do |key, value| %>
     <div class="flash flash-<%= key %>">
       <%= value %>
     </div>
