set up file uploading for band images/AWS bucket

--- a/app/views/bands/new.html.erb
+++ b/app/views/bands/new.html.erb
@@ -11,5 +11,10 @@
     <%= f.text_area :biography %>
   </div>
 
+  <div>
+    <h3>(Optional): Upload Band Profile Image</h3>
+    <%= f.file_field :image%>
+  </div>
+
   <%= f.submit "Add Local Band"%>
 <%end%>
