--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
     <span class="top-bar-left"> <%= link_to  'Bands', root_path %></span>
     <div class="top-bar-right">
       <% if signed_in? %>
-        <span><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></span>
+        <span class="nav-text"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></span>
+        <span class="nav-text"><%= link_to "Create Band", new_band_path %></span>
       <% else %>
         <span class="nav-text"><%= link_to "Sign In", new_user_session_path %></span>
         <span class="nav-text"><%= link_to "Sign Up", new_user_registration_path %></span>
