--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
     <div class="top-bar-right">
       <% if signed_in? %>
         <span class="nav-text"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></span>
-        <span class="nav-text"><%= link_to "Create Band", new_band_path %></span>
+        <%if current_user.admin? %>
+          <span class="nav-text"><%= link_to "Create Band", new_band_path %></span>
+        <%end%>
       <% else %>
         <span class="nav-text"><%= link_to "Sign In", new_user_session_path %></span>
         <span class="nav-text"><%= link_to "Sign Up", new_user_registration_path %></span>
