updated styling to radio buttons

--- a/app/assets/stylesheets/reviews/tile.scss
+++ b/app/assets/stylesheets/reviews/tile.scss
@@ -11,3 +11,12 @@
     justify-content: space-between;
     padding: 0px 1rem;
 }
+
+.review-button {
+    display: flex;
+    align-content:center;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0px 1rem;
+    width: 20%;
+}
