--- a/app/assets/stylesheets/bands/main.scss
+++ b/app/assets/stylesheets/bands/main.scss
@@ -4,6 +4,7 @@
     text-align: center;
     border: 3px solid black;
     border-radius: 10px;
+    margin: 20px 50px;
 }
 
 .band-name-text {
@@ -13,4 +14,42 @@
 
 .update-band-form {
     margin-bottom: 1rem;
+}
+
+.button {
+    color: blue;
+    border-radius: 50%;
+}
+
+.desc-tab{
+    background-color: red;
+    width: 100%;
+}
+
+.band-head {
+    text-align: center;
+}
+
+.inbox {
+    background-color: white;
+    box-sizing: border-box;
+    margin: 1rem 5rem;
+    padding: 1rem;
+}
+
+.edit-button {
+    color: white;
+    background-color: #1779BA;
+    padding: 12.24px 14.4px;
+    margin: 16px 80px;
+}
+
+.optional {
+    font-size: 1rem;
+    text-align: left;
+}
+
+.login-sign-up{
+    text-align: center;
+    width: 67%;
 }
