--- a/app/assets/stylesheets/bands/new.scss
+++ b/app/assets/stylesheets/bands/new.scss
@@ -1,3 +1,14 @@
 .field {
-    width: 50%;
+    width: 40%;
+    text-align: center;
+    margin: auto;
+}
+
+.add-button {
+    width: 40%;
+    text-align: center;
+    margin: 0 27rem;
+    color: white;
+    background-color: #1779BA;
+    padding: 12.24px 14.4px;
 }
