made index page styling changes

--- a/app/assets/stylesheets/reviews/tile.scss
+++ b/app/assets/stylesheets/reviews/tile.scss
@@ -31,14 +31,13 @@
     font-size: 1.2rem;
 }
 
-.USER {
+.user {
     color: rgb(17, 148, 224);
     font-size: 1.2rem;
 }
 
 .stars {
     color: orange;
-
 }
 
 .ratings {
