--- a/app/assets/stylesheets/bands/main.scss
+++ b/app/assets/stylesheets/bands/main.scss
@@ -1,15 +1,20 @@
 
+.band-tile-container {
+    margin: 20px;
+}
 .band-tile {
     background-color: skyblue;
     text-align: center;
     border: 3px solid black;
-    border-radius: 10px;
-    margin: 20px 50px;
+    border-radius: 20px;
+    margin-bottom: 20px;
+    
 }
 
 .band-name-text {
    font-size: 30px;
    margin-bottom: 0px;
+   position: relative;
 }
 
 .update-band-form {
