--- a/app/assets/stylesheets/bands/main.scss
+++ b/app/assets/stylesheets/bands/main.scss
@@ -60,4 +60,10 @@
 .login-sign-up{
     text-align: center;
     width: 67%;
+    margin: auto;
+}
+
+.edit-div {
+    width: 50%;
+    margin: auto;
 }
