--- a/app/assets/stylesheets/bands/main.scss
+++ b/app/assets/stylesheets/bands/main.scss
@@ -18,6 +18,7 @@
    font-size: 30px;
    margin-bottom: 0px;
    position: relative;
+   font-family: 'Metal Mania', cursive;
 }
 
 .update-band-form {
