--- a/app/assets/stylesheets/nav/main.scss
+++ b/app/assets/stylesheets/nav/main.scss
@@ -8,7 +8,7 @@
 .top-bar-left{
     font-size: 3rem;
     padding-top: 0%;
-
+    font-family: 'Metal Mania', cursive;
 }
 .nav-text{
     font-size: 1.3rem;
